cmake_minimum_required(VERSION 3.6)
project(chill)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
        autom4te.cache/output.0
        autom4te.cache/output.1
        autom4te.cache/output.2
        autom4te.cache/output.3
        autom4te.cache/requests
        autom4te.cache/traces.0
        autom4te.cache/traces.1
        autom4te.cache/traces.2
        autom4te.cache/traces.3
        include/config.h
        include/config.h.in
        include/ir_suif.hh
        include/ir_suif_utils.hh
        include/stamp-h1
        omega/autom4te.cache/output.0
        omega/autom4te.cache/output.1
        omega/autom4te.cache/requests
        omega/autom4te.cache/traces.0
        omega/autom4te.cache/traces.1
        omega/basic/include/basic/Bag.c
        omega/basic/include/basic/Bag.h
        omega/basic/include/basic/boolset-test.cc
        omega/basic/include/basic/BoolSet.h
        omega/basic/include/basic/boolset.h
        omega/basic/include/basic/Collection.h
        omega/basic/include/basic/Collections.h
        omega/basic/include/basic/ConstString.h
        omega/basic/include/basic/Dynamic_Array.c
        omega/basic/include/basic/Dynamic_Array.h
        omega/basic/include/basic/Iterator.h
        omega/basic/include/basic/Link.h
        omega/basic/include/basic/List.c
        omega/basic/include/basic/List.h
        omega/basic/include/basic/Map.c
        omega/basic/include/basic/Map.h
        omega/basic/include/basic/omega_error.h
        omega/basic/include/basic/Section.c
        omega/basic/include/basic/Section.h
        omega/basic/include/basic/SimpleList.c
        omega/basic/include/basic/SimpleList.h
        omega/basic/include/basic/Tuple.c
        omega/basic/include/basic/Tuple.h
        omega/basic/include/basic/util.h
        omega/basic/src/ConstString.cc
        omega/basic/src/Link.cc
        omega/code_gen/include/code_gen/CG.h
        omega/code_gen/include/code_gen/CG_outputBuilder.h
        omega/code_gen/include/code_gen/CG_outputRepr.h
        omega/code_gen/include/code_gen/CG_roseBuilder.h
        omega/code_gen/include/code_gen/CG_roseRepr.h
        omega/code_gen/include/code_gen/CG_stringBuilder.h
        omega/code_gen/include/code_gen/CG_stringRepr.h
        omega/code_gen/include/code_gen/CG_suifBuilder.h
        omega/code_gen/include/code_gen/CG_suifRepr.h
        omega/code_gen/include/code_gen/CG_utils.h
        omega/code_gen/include/code_gen/code_gen.h
        omega/code_gen/include/code_gen/codegen.h
        omega/code_gen/include/code_gen/codegen_error.h
        omega/code_gen/include/code_gen/cscope.out
        omega/code_gen/include/code_gen/output_repr.h
        omega/code_gen/include/code_gen/rose_attributes.h
        omega/code_gen/obj/libcodegen.a
        omega/code_gen/obj/libcodegen_a-CG.o
        omega/code_gen/obj/libcodegen_a-CG_roseBuilder.o
        omega/code_gen/obj/libcodegen_a-CG_roseRepr.o
        omega/code_gen/obj/libcodegen_a-CG_stringBuilder.o
        omega/code_gen/obj/libcodegen_a-CG_utils.o
        omega/code_gen/obj/libcodegen_a-codegen.o
        omega/code_gen/obj/libcodegen_a-rose_attributes.o
        omega/code_gen/obj/Makefile
        omega/code_gen/obj/Makefile.am
        omega/code_gen/obj/Makefile.deps
        omega/code_gen/obj/Makefile.in
        omega/code_gen/src/CG.cc
        omega/code_gen/src/CG_roseBuilder.cc
        omega/code_gen/src/CG_roseRepr.cc
        omega/code_gen/src/CG_stringBuilder.cc
        omega/code_gen/src/CG_stringRepr.cc
        omega/code_gen/src/CG_suifBuilder.cc
        omega/code_gen/src/CG_suifRepr.cc
        omega/code_gen/src/CG_utils.cc
        omega/code_gen/src/code_gen.cc
        omega/code_gen/src/codegen.cc
        omega/code_gen/src/cscope.out
        omega/code_gen/src/output_repr.cc
        omega/code_gen/src/rose_attributes.cc
        omega/code_gen/src/tags
        omega/doc/calculator.pdf
        omega/doc/interface.pdf
        omega/examples/c_code/example.c
        omega/examples/c_code/library_example.c
        omega/examples/c_code/Makefile
        omega/examples/c_code/PT-example.c
        omega/examples/experiments/gemm/codegen.input
        omega/examples/experiments/gemm/gemm.out
        omega/examples/experiments/gemv/codegen.input
        omega/examples/experiments/gemv/gemv.out
        omega/examples/experiments/lu/codegen.input
        omega/examples/experiments/lu/lu.out
        omega/examples/experiments/qr/codegen.input
        omega/examples/experiments/qr/qr.out
        omega/examples/experiments/swim/swim-codegen.input
        omega/examples/experiments/swim/swim.out
        omega/examples/old_test/affineClosure
        omega/examples/old_test/affineClosure.oc-rt
        omega/examples/old_test/affineClosure2
        omega/examples/old_test/affineClosure2.oc-rt
        omega/examples/old_test/beatrice2
        omega/examples/old_test/beatrice2.oc-rt
        omega/examples/old_test/blume1.w
        omega/examples/old_test/blume1.w.oc-rt
        omega/examples/old_test/cfft2d1
        omega/examples/old_test/cfft2d1.oc-rt
        omega/examples/old_test/chosol
        omega/examples/old_test/chosol.oc-rt
        omega/examples/old_test/closure1
        omega/examples/old_test/closure1.oc-rt
        omega/examples/old_test/closure2
        omega/examples/old_test/closure2.oc-rt
        omega/examples/old_test/closure3
        omega/examples/old_test/closure3.oc-rt
        omega/examples/old_test/closure4
        omega/examples/old_test/closure4.oc-rt
        omega/examples/old_test/closure5
        omega/examples/old_test/closure5.oc-rt
        omega/examples/old_test/closure6
        omega/examples/old_test/closure6.oc-rt
        omega/examples/old_test/closure7
        omega/examples/old_test/closure7.oc-rt
        omega/examples/old_test/closure8
        omega/examples/old_test/closure8.oc-rt
        omega/examples/old_test/collard
        omega/examples/old_test/collard.oc-rt
        omega/examples/old_test/cover
        omega/examples/old_test/cover.oc-rt
        omega/examples/old_test/dagstuhl1
        omega/examples/old_test/dagstuhl1.oc-rt
        omega/examples/old_test/dagstuhl2
        omega/examples/old_test/dagstuhl2.oc-rt
        omega/examples/old_test/dagstuhl3
        omega/examples/old_test/dagstuhl3.oc-rt
        omega/examples/old_test/davew1
        omega/examples/old_test/davew1.oc-rt
        omega/examples/old_test/ddtest
        omega/examples/old_test/ddtest.oc-rt
        omega/examples/old_test/emit
        omega/examples/old_test/emit.oc-rt
        omega/examples/old_test/example1
        omega/examples/old_test/example1.oc-rt
        omega/examples/old_test/farkas
        omega/examples/old_test/farkas.oc-rt
        omega/examples/old_test/farkas2
        omega/examples/old_test/farkas2.oc-rt
        omega/examples/old_test/farkas3
        omega/examples/old_test/farkas3.oc-rt
        omega/examples/old_test/fc1
        omega/examples/old_test/fc1.oc-rt
        omega/examples/old_test/fc2
        omega/examples/old_test/fc2.oc-rt
        omega/examples/old_test/foo
        omega/examples/old_test/foo.oc-rt
        omega/examples/old_test/foo2
        omega/examples/old_test/foo2.oc-rt
        omega/examples/old_test/foo6
        omega/examples/old_test/foo6.oc-rt
        omega/examples/old_test/forall
        omega/examples/old_test/forall.oc-rt
        omega/examples/old_test/gc
        omega/examples/old_test/gc.oc-rt
        omega/examples/old_test/ge
        omega/examples/old_test/ge.oc-rt
        omega/examples/old_test/givens2
        omega/examples/old_test/givens2.oc-rt
        omega/examples/old_test/guard1
        omega/examples/old_test/guard1.oc-rt
        omega/examples/old_test/hull1
        omega/examples/old_test/hull1.oc-rt
        omega/examples/old_test/hull2
        omega/examples/old_test/hull2.oc-rt
        omega/examples/old_test/hull3
        omega/examples/old_test/hull3.oc-rt
        omega/examples/old_test/ip1
        omega/examples/old_test/ip1.oc-rt
        omega/examples/old_test/ip2
        omega/examples/old_test/ip2.oc-rt
        omega/examples/old_test/ip3
        omega/examples/old_test/ip3.oc-rt
        omega/examples/old_test/iter1
        omega/examples/old_test/iter1.oc-rt
        omega/examples/old_test/iter2
        omega/examples/old_test/iter2.oc-rt
        omega/examples/old_test/iter3
        omega/examples/old_test/iter3.oc-rt
        omega/examples/old_test/iter4
        omega/examples/old_test/iter4.oc-rt
        omega/examples/old_test/iter5
        omega/examples/old_test/iter5.oc-rt
        omega/examples/old_test/iter6
        omega/examples/old_test/iter6.oc-rt
        omega/examples/old_test/iter7
        omega/examples/old_test/iter7.oc-rt
        omega/examples/old_test/iter8
        omega/examples/old_test/iter8.oc-rt
        omega/examples/old_test/iter9
        omega/examples/old_test/iter9.oc-rt
        omega/examples/old_test/lefur00
        omega/examples/old_test/lefur00.oc-rt
        omega/examples/old_test/lefur01
        omega/examples/old_test/lefur01.oc-rt
        omega/examples/old_test/lefur03
        omega/examples/old_test/lefur03-3
        omega/examples/old_test/lefur03-3.oc-rt
        omega/examples/old_test/lefur03.c
        omega/examples/old_test/lefur03.oc-rt
        omega/examples/old_test/lefur04
        omega/examples/old_test/lefur04.oc-rt
        omega/examples/old_test/lefur05
        omega/examples/old_test/lefur05.oc-rt
        omega/examples/old_test/lift1
        omega/examples/old_test/lift1.oc-rt
        omega/examples/old_test/lift2
        omega/examples/old_test/lift2.oc-rt
        omega/examples/old_test/long_input
        omega/examples/old_test/long_input.oc-rt
        omega/examples/old_test/lu_ijk
        omega/examples/old_test/lu_ijk.oc-rt
        omega/examples/old_test/lu_spmd
        omega/examples/old_test/lu_spmd.oc-rt
        omega/examples/old_test/m1
        omega/examples/old_test/m1.oc-rt
        omega/examples/old_test/m10
        omega/examples/old_test/m10.oc-rt
        omega/examples/old_test/m11
        omega/examples/old_test/m11.oc-rt
        omega/examples/old_test/m12
        omega/examples/old_test/m12.oc-rt
        omega/examples/old_test/m2
        omega/examples/old_test/m2.oc-rt
        omega/examples/old_test/m3
        omega/examples/old_test/m3.oc-rt
        omega/examples/old_test/m4
        omega/examples/old_test/m4.oc-rt
        omega/examples/old_test/m7
        omega/examples/old_test/m7.oc-rt
        omega/examples/old_test/m8
        omega/examples/old_test/m8.oc-rt
        omega/examples/old_test/m9
        omega/examples/old_test/m9.oc-rt
        omega/examples/old_test/maximize
        omega/examples/old_test/maximize.oc-rt
        omega/examples/old_test/olda
        omega/examples/old_test/olda.oc-rt
        omega/examples/old_test/p.delft
        omega/examples/old_test/p.delft.oc-rt
        omega/examples/old_test/p.delft2
        omega/examples/old_test/p.delft2.oc-rt
        omega/examples/old_test/p.delft3
        omega/examples/old_test/p.delft3.oc-rt
        omega/examples/old_test/p.subset
        omega/examples/old_test/p.subset.oc-rt
        omega/examples/old_test/p1
        omega/examples/old_test/p1.oc-rt
        omega/examples/old_test/p10
        omega/examples/old_test/p10.oc-rt
        omega/examples/old_test/p11
        omega/examples/old_test/p11.oc-rt
        omega/examples/old_test/p12
        omega/examples/old_test/p12.oc-rt
        omega/examples/old_test/p13
        omega/examples/old_test/p13.oc-rt
        omega/examples/old_test/p2
        omega/examples/old_test/p2.oc-rt
        omega/examples/old_test/p3
        omega/examples/old_test/p3.oc-rt
        omega/examples/old_test/p4
        omega/examples/old_test/p4.oc-rt
        omega/examples/old_test/p5
        omega/examples/old_test/p5.oc-rt
        omega/examples/old_test/p6
        omega/examples/old_test/p6.oc-rt
        omega/examples/old_test/p7
        omega/examples/old_test/p7.oc-rt
        omega/examples/old_test/p8
        omega/examples/old_test/p8.oc-rt
        omega/examples/old_test/p9
        omega/examples/old_test/p9.oc-rt
        omega/examples/old_test/pufs1
        omega/examples/old_test/pufs1.oc-rt
        omega/examples/old_test/pufs2
        omega/examples/old_test/pufs2.oc-rt
        omega/examples/old_test/pufs3
        omega/examples/old_test/pufs3.oc-rt
        omega/examples/old_test/pufs4
        omega/examples/old_test/pufs4.oc-rt
        omega/examples/old_test/pufs5
        omega/examples/old_test/pufs5.oc-rt
        omega/examples/old_test/pufs6
        omega/examples/old_test/pufs6.oc-rt
        omega/examples/old_test/pufs7
        omega/examples/old_test/pufs7.oc-rt
        omega/examples/old_test/reach1
        omega/examples/old_test/reach1.oc-rt
        omega/examples/old_test/reach2
        omega/examples/old_test/reach2.oc-rt
        omega/examples/old_test/reach3
        omega/examples/old_test/reach3.oc-rt
        omega/examples/old_test/red1
        omega/examples/old_test/red1.oc-rt
        omega/examples/old_test/saman
        omega/examples/old_test/saman.oc-rt
        omega/examples/old_test/sample1
        omega/examples/old_test/sample1.oc-rt
        omega/examples/old_test/sample2
        omega/examples/old_test/sample2.oc-rt
        omega/examples/old_test/sample3
        omega/examples/old_test/sample3.oc-rt
        omega/examples/old_test/stodghil
        omega/examples/old_test/stodghil.oc-rt
        omega/examples/old_test/stride1
        omega/examples/old_test/stride1.oc-rt
        omega/examples/old_test/stride2
        omega/examples/old_test/stride2.oc-rt
        omega/examples/old_test/stride3
        omega/examples/old_test/stride3.oc-rt
        omega/examples/old_test/stride4
        omega/examples/old_test/stride4.oc-rt
        omega/examples/old_test/stride5
        omega/examples/old_test/stride5.oc-rt
        omega/examples/old_test/stride6
        omega/examples/old_test/stride6.oc-rt
        omega/examples/old_test/stride7
        omega/examples/old_test/stride7.oc-rt
        omega/examples/old_test/subsets1
        omega/examples/old_test/subsets1.oc-rt
        omega/examples/old_test/subsets2
        omega/examples/old_test/subsets2.oc-rt
        omega/examples/old_test/tex1
        omega/examples/old_test/tex1.oc-rt
        omega/examples/old_test/tricky
        omega/examples/old_test/tricky.oc-rt
        omega/examples/old_test/ts1d-check-sblock
        omega/examples/old_test/ts1d-check-sblock.oc-rt
        omega/examples/old_test/ts1d-check0
        omega/examples/old_test/ts1d-check0.oc-rt
        omega/examples/old_test/ts1d-mp-i_ts-m_b
        omega/examples/old_test/ts1d-mp-i_ts-m_b.oc-rt
        omega/examples/old_test/ts1d-orig0
        omega/examples/old_test/ts1d-orig0.oc-rt
        omega/examples/old_test/tseng
        omega/examples/old_test/tseng.oc-rt
        omega/examples/old_test/verlind1
        omega/examples/old_test/verlind1.oc-rt
        omega/examples/old_test/verlind1a
        omega/examples/old_test/verlind1a.oc-rt
        omega/examples/old_test/wak1
        omega/examples/old_test/wak1.oc-rt
        omega/examples/old_test/wak2
        omega/examples/old_test/wak2.oc-rt
        omega/examples/old_test/wak3
        omega/examples/old_test/wak3.oc-rt
        omega/examples/old_test/wak4
        omega/examples/old_test/wak4.oc-rt
        omega/examples/old_test/wak5
        omega/examples/old_test/wak5.oc-rt
        omega/examples/old_test/wak6
        omega/examples/old_test/wak6.oc-rt
        omega/examples/old_test/wak7
        omega/examples/old_test/wak7.oc-rt
        omega/examples/old_test/wak8
        omega/examples/old_test/wak8.oc-rt
        omega/examples/old_test/wielage
        omega/examples/old_test/wielage.oc-rt
        omega/examples/old_test/wild
        omega/examples/old_test/wild.oc-rt
        omega/examples/old_test/wrap
        omega/examples/old_test/wrap.oc-rt
        omega/examples/old_test/wrap0
        omega/examples/old_test/wrap0.oc-rt
        omega/examples/old_test/wrap1
        omega/examples/old_test/wrap1.oc-rt
        omega/examples/old_test/x
        omega/examples/old_test/x.oc-rt
        omega/examples/basics
        omega/examples/basics.out
        omega/examples/code_gen
        omega/examples/code_gen.out
        omega/examples/floor_bound
        omega/examples/floor_bound.out
        omega/examples/gist
        omega/examples/gist.out
        omega/examples/hpf
        omega/examples/hpf.out
        omega/examples/hull
        omega/examples/hull.out
        omega/examples/if_then
        omega/examples/interface
        omega/examples/interface.out
        omega/examples/lu
        omega/examples/lu.out
        omega/examples/pufs
        omega/examples/pufs.out
        omega/examples/substitution
        omega/examples/substitution.out
        omega/examples/syr2k
        omega/examples/syr2k.out
        omega/examples/union
        omega/examples/union.out
        omega/include/omega/omega_core/debugging.h
        omega/include/omega/omega_core/oc.h
        omega/include/omega/omega_core/oc_i.h
        omega/include/config.h
        omega/include/config.h.in
        omega/include/stamp-h1
        omega/omega_calc/doc/calculator.pdf
        omega/omega_calc/include/omega_calc/AST.h
        omega/omega_calc/include/omega_calc/myflex.h
        omega/omega_calc/include/omega_calc/PT-omega.c
        omega/omega_calc/obj/FlexLexer.h
        omega/omega_calc/obj/lex.yy.cc
        omega/omega_calc/obj/Makefile
        omega/omega_calc/obj/Makefile.am
        omega/omega_calc/obj/Makefile.deps
        omega/omega_calc/obj/Makefile.in
        omega/omega_calc/obj/oc
        omega/omega_calc/obj/oc-AST.o
        omega/omega_calc/obj/oc-lex.yy.o
        omega/omega_calc/obj/oc-myflex.o
        omega/omega_calc/obj/oc-parser.tab.o
        omega/omega_calc/obj/parser.tab.cc
        omega/omega_calc/obj/parser.tab.hh
        omega/omega_calc/obj/tile.script
        omega/omega_calc/src/AST.cc
        omega/omega_calc/src/lex.yy.cc
        omega/omega_calc/src/myflex.cc
        omega/omega_calc/src/parser.l
        omega/omega_calc/src/parser.ll
        omega/omega_calc/src/parser.tab.cc
        omega/omega_calc/src/parser.tab.hh
        omega/omega_calc/src/parser.y
        omega/omega_calc/src/parser.yy
        omega/omega_lib/doc/interface.pdf
        omega/omega_lib/include/omega/omega_core/debugging.h
        omega/omega_lib/include/omega/omega_core/oc.h
        omega/omega_lib/include/omega/omega_core/oc_i.h
        omega/omega_lib/include/omega/closure.h
        omega/omega_lib/include/omega/evac.h
        omega/omega_lib/include/omega/farkas.h
        omega/omega_lib/include/omega/hull.h
        omega/omega_lib/include/omega/omega_i.h
        omega/omega_lib/include/omega/pres_cmpr.h
        omega/omega_lib/include/omega/pres_cnstr.h
        omega/omega_lib/include/omega/pres_conj.h
        omega/omega_lib/include/omega/pres_decl.h
        omega/omega_lib/include/omega/pres_dnf.h
        omega/omega_lib/include/omega/pres_form.h
        omega/omega_lib/include/omega/pres_gen.h
        omega/omega_lib/include/omega/pres_logic.h
        omega/omega_lib/include/omega/pres_quant.h
        omega/omega_lib/include/omega/pres_subs.h
        omega/omega_lib/include/omega/pres_tree.h
        omega/omega_lib/include/omega/pres_var.h
        omega/omega_lib/include/omega/reach.h
        omega/omega_lib/include/omega/Rel_map.h
        omega/omega_lib/include/omega/Relation.h
        omega/omega_lib/include/omega/Relations.h
        omega/omega_lib/include/omega/RelBody.h
        omega/omega_lib/include/compiler_invoc.txt
        omega/omega_lib/include/omega.h
        omega/omega_lib/obj/libomega.a
        omega/omega_lib/obj/libomega_a-closure.o
        omega/omega_lib/obj/libomega_a-ConstString.o
        omega/omega_lib/obj/libomega_a-evac.o
        omega/omega_lib/obj/libomega_a-farkas.o
        omega/omega_lib/obj/libomega_a-hull_legacy.o
        omega/omega_lib/obj/libomega_a-hull_simple.o
        omega/omega_lib/obj/libomega_a-Link.o
        omega/omega_lib/obj/libomega_a-oc.o
        omega/omega_lib/obj/libomega_a-oc_eq.o
        omega/omega_lib/obj/libomega_a-oc_exp_kill.o
        omega/omega_lib/obj/libomega_a-oc_global.o
        omega/omega_lib/obj/libomega_a-oc_print.o
        omega/omega_lib/obj/libomega_a-oc_problems.o
        omega/omega_lib/obj/libomega_a-oc_query.o
        omega/omega_lib/obj/libomega_a-oc_quick_kill.o
        omega/omega_lib/obj/libomega_a-oc_simple.o
        omega/omega_lib/obj/libomega_a-oc_solve.o
        omega/omega_lib/obj/libomega_a-oc_util.o
        omega/omega_lib/obj/libomega_a-pres_beaut.o
        omega/omega_lib/obj/libomega_a-pres_cnstr.o
        omega/omega_lib/obj/libomega_a-pres_col.o
        omega/omega_lib/obj/libomega_a-pres_conj.o
        omega/omega_lib/obj/libomega_a-pres_decl.o
        omega/omega_lib/obj/libomega_a-pres_dnf.o
        omega/omega_lib/obj/libomega_a-pres_form.o
        omega/omega_lib/obj/libomega_a-pres_gen.o
        omega/omega_lib/obj/libomega_a-pres_logic.o
        omega/omega_lib/obj/libomega_a-pres_print.o
        omega/omega_lib/obj/libomega_a-pres_quant.o
        omega/omega_lib/obj/libomega_a-pres_rear.o
        omega/omega_lib/obj/libomega_a-pres_subs.o
        omega/omega_lib/obj/libomega_a-pres_var.o
        omega/omega_lib/obj/libomega_a-reach.o
        omega/omega_lib/obj/libomega_a-Relation.o
        omega/omega_lib/obj/libomega_a-Relations.o
        omega/omega_lib/obj/libomega_a-RelBody.o
        omega/omega_lib/obj/libomega_a-RelVar.o
        omega/omega_lib/obj/Makefile
        omega/omega_lib/obj/Makefile.am
        omega/omega_lib/obj/Makefile.deps
        omega/omega_lib/obj/Makefile.in
        omega/omega_lib/src/omega_core/oc.cc
        omega/omega_lib/src/omega_core/oc_eq.cc
        omega/omega_lib/src/omega_core/oc_exp_kill.cc
        omega/omega_lib/src/omega_core/oc_global.cc
        omega/omega_lib/src/omega_core/oc_print.cc
        omega/omega_lib/src/omega_core/oc_problems.cc
        omega/omega_lib/src/omega_core/oc_query.cc
        omega/omega_lib/src/omega_core/oc_quick_kill.cc
        omega/omega_lib/src/omega_core/oc_simple.cc
        omega/omega_lib/src/omega_core/oc_solve.cc
        omega/omega_lib/src/omega_core/oc_util.cc
        omega/omega_lib/src/closure.cc
        omega/omega_lib/src/evac.cc
        omega/omega_lib/src/farkas.cc
        omega/omega_lib/src/hull.cc
        omega/omega_lib/src/hull_legacy.cc
        omega/omega_lib/src/hull_simple.cc
        omega/omega_lib/src/pres_beaut.cc
        omega/omega_lib/src/pres_cnstr.cc
        omega/omega_lib/src/pres_col.cc
        omega/omega_lib/src/pres_conj.cc
        omega/omega_lib/src/pres_decl.cc
        omega/omega_lib/src/pres_dnf.cc
        omega/omega_lib/src/pres_form.cc
        omega/omega_lib/src/pres_gen.cc
        omega/omega_lib/src/pres_logic.cc
        omega/omega_lib/src/pres_print.cc
        omega/omega_lib/src/pres_quant.cc
        omega/omega_lib/src/pres_rear.cc
        omega/omega_lib/src/pres_subs.cc
        omega/omega_lib/src/pres_var.cc
        omega/omega_lib/src/reach.cc
        omega/omega_lib/src/Relation.cc
        omega/omega_lib/src/Relations.cc
        omega/omega_lib/src/RelBody.cc
        omega/omega_lib/src/RelVar.cc
        omega/aclocal.m4
        omega/config.log
        omega/config.status
        omega/configure
        omega/configure.ac
        omega/depcomp
        omega/install-sh
        omega/LICENSE
        omega/Makefile.am
        omega/Makefile.in
        omega/missing
        test-chill/with/test_distribute.py.out
        test-chill/with/test_fuse.py.out
        test-chill/with/test_known.py.out
        test-chill/with/test_known_2.py.out
        test-chill/with/test_original.py.out
        test-chill/with/test_peel.py.out
        test-chill/with/test_permute.py.out
        test-chill/with/test_print_code.py.out
        test-chill/with/test_print_dep.py.out
        test-chill/with/test_print_space.py.out
        test-chill/with/test_reverse.py.out
        test-chill/with/test_scale.py.out
        test-chill/with/test_shift.py.out
        test-chill/with/test_shift_to.py.out
        test-chill/with/test_skew.py.out
        test-chill/with/test_tile.py.out
        test-chill/with/test_unroll.py.out
        test-chill/with/test_unroll_extra.py.out
        test-chill/without/test_distribute.py.out
        test-chill/without/test_fuse.py.out
        test-chill/without/test_known.py.out
        test-chill/without/test_known_2.py.out
        test-chill/without/test_original.py.out
        test-chill/without/test_peel.py.out
        test-chill/without/test_permute.py.out
        test-chill/without/test_print_code.py.out
        test-chill/without/test_print_dep.py.out
        test-chill/without/test_print_space.py.out
        test-chill/without/test_reverse.py.out
        test-chill/without/test_scale.py.out
        test-chill/without/test_shift.py.out
        test-chill/without/test_shift_to.py.out
        test-chill/without/test_skew.py.out
        test-chill/without/test_tile.py.out
        test-chill/without/test_unroll.py.out
        test-chill/without/test_unroll_extra.py.out
        test-chill/mm.c
        test-chill/runtests
        test-chill/test_distribute.py
        test-chill/test_fuse.py
        test-chill/test_known.py
        test-chill/test_known_2.py
        test-chill/test_original.py
        test-chill/test_peel.py
        test-chill/test_permute.py
        test-chill/test_print_code.py
        test-chill/test_print_dep.py
        test-chill/test_print_space.py
        test-chill/test_reverse.py
        test-chill/test_scale.py
        test-chill/test_shift.py
        test-chill/test_shift_to.py
        test-chill/test_skew.py
        test-chill/test_tile.py
        test-chill/test_unroll.py
        test-chill/test_unroll_extra.py
        test-chill/testrun.log
        aclocal.m4
        bison_2.7.1.dfsg-1_amd64.deb
        buildall
        chill
        chill-chill_run.o
        chill-chill_run_util.o
        chill-chillmodule.o
        chill-dep.o
        chill-ir_rose.o
        chill-ir_rose_utils.o
        chill-irtools.o
        chill-loop.o
        chill-loop_basic.o
        chill-loop_datacopy.o
        chill-loop_extra.o
        chill-loop_tile.o
        chill-loop_unroll.o
        chill-omegatools.o
        chill-parse_expr.tab.o
        chill-parse_expr.yy.o
        CHiLL.pdf
        chill_env.hh
        chill_error.hh
        chill_run.cc
        chill_run_util.cc
        chill_run_util.hh
        chilldebug.h
        chillmodule.cc
        chillmodule.hh
        config.log
        config.status
        configure
        configure.ac
        dep.cc
        dep.hh
        depcomp
        graph.hh
        install-sh
        ir_code.hh
        ir_rose.cc
        ir_rose.hh
        ir_rose_utils.cc
        ir_rose_utils.hh
        irtools.cc
        irtools.hh
        libbison-dev_2.7.1.dfsg-1_amd64.deb
        LICENSE
        loop.cc
        loop.hh
        loop_basic.cc
        loop_datacopy.cc
        loop_extra.cc
        loop_tile.cc
        loop_unroll.cc
        Makefile
        Makefile.am
        Makefile.deps
        Makefile.in
        missing
        omegatools.cc
        omegatools.hh
        parse_expr.ll
        parse_expr.ll.hh
        parse_expr.tab.cc
        parse_expr.tab.hh
        parse_expr.yy
        parse_expr.yy.cc
        parser.ll
        parser.yy
        README)

add_executable(chill ${SOURCE_FILES})